2006-08-12  Cezary Krzyżanowski  <cezary.krzyzanowski@gmail.com>

	* Utils/Platform.pm: added support for PLD 2.99

2006-08-11  Carlos Garnacho  <carlosg@gnome.org>

	* Init/ServicesList.pm: add postgresql-8.1 to the list. Ubuntu patch
	* Network/Ifaces.pm (check_capi): modified Ubuntu patch. More reliable
	ISDN detection on Linux.
	(get_interface_replace_table) (set): hardcode serial speed to 115200.
	Modified Ubuntu patch
	* Utils/Backend.pm (daemonize) (set_no_daemon) (init): run daemonized
	by default, add --no-daemon. Modified Ubuntu patch. Also, remove lots
	of unused code
	* Utils/File.pm (get_data_path): removed, no longer necessary
	* Utils/Platform.pm: slight code fixes
	* Utils/Replace.pm (set_ppp_options_connect): use chatscript path.
	Ubuntu patch.

	Thanks to the Ubuntu Folks!! (mvo and dholbach surely)

2006-08-11  Carlos Garnacho  <carlosg@gnome.org>

	* Utils/Platform.pm (guess): make distribution detection more generic,
	remove lots of check_distro() functions.
	(ensure_distro_map): create a distro metamap, from now adding a new
	distro that behaves exactly like another will be one liner.
	(PLATFORM_INFO): remove some ancient (as in ooold) distros.

	* Init/Services.pm, Network/Hosts.pm, Network/Ifaces.pm,
	Shares/SMB.pm, Time/NTP.pm, Time/TimeDate.pm, Users/Users.pm: Unify
	parse/replace distro maps where necessary, make shorter those lists 
	now that the distro metamap is there.

2006-08-05  Carlos Garnacho  <carlosg@gnome.org>

	* Services.pm (get_gentoo_runlevel_status_by_service)
	(get_gentoo_service_info) (get_gentoo_services) (get_init_type): Fix
	glitches that made ServicesConfig misbehave with gentoo
	* File.pm (get_cmd_command): return -1 if the command doesn't exist

2006-08-02  Carlos Garnacho  <carlosg@gnome.org>

	* Release 1.9.2

2006-08-02  Carlos Garnacho  <carlosg@gnome.org>

	* Utils/Monitor.pm: monitor also "created" events

2006-07-28  Carlos Garnacho  <carlosg@gnome.org>
